            - Removed column: mailbox.local_part.
              It's inherited from PostfixAdmin at the beginning, but not used
              by any applications, time to drop it.
            - Table renamed: alias_moderators -> moderators.
        - LDAP backend:
            - Allow mail list account to use 2 attributes: member, uniqueMember.
        - Fail2ban: new jail `postfix-pregreet`.
        - Dovecot: Log subject, sender, size in mail deliver log.
        - Amavisd: Add new sql column `maddr.email_raw` and trigger to store
          email address without address extension.

    * Fixed issues:
        - installer:
            - not correctly configure SOGo with IPv6 SQL server address.
              Thanks to Wraptor <nijs.thibaut _at_ gmail.com> for the report in
              forum.
            - not check whether mailbox storage is set to /root.
        - Postfix: don't block the HELOs used by SendGrid.
        - Nginx:
            - Use single config file for default web hosts.
            - [SECURITY FIX] Not block access to Roundcube sensitive files.
        - SOGo: Cannot sync contacts on Android devices via EAS.
        - Amavisd: cannot store mail subject if contains emoji.
        - SQL backends:
            - User under disabled domain is able to send email with smtp protocol.
        - tools/backup_sogo.sh
            - not set correct owner and permission on backup files.
            - cannot remove old backup files.
        - tools/backup_openldap.sh:
            - Cannot log backup result to SQL db.
              Note: backup is fine, just no log in SQL db.
              Thanks swejun <ingvar _at_ zebware.com> for the feedback and fix
              in forum.
        - tools/create_mail_user_*:
            - Not use current date as password last change date for newly
              created user.
        - tools/migrate_sql_alias_table.py:
            - doesn't support 'utf8' charset.