@@ -356,7 +356,7 @@ EOF
     exit 255
 fi
 
-# Check hardware architecture.
+# Check processor type.
 if [ X"${DISTRO}" == X'DEBIAN' ]; then
     arch="$(uname -m)"
 else
