@@ -12,11 +12,5 @@ server {
     #listen [::]:PH_HTTPD_PORT;
 
     server_name _;
-    root PH_HTTPD_DOCUMENTROOT;
-    index index.php index.html;
-
-    include PH_NGINX_CONF_TMPL_DIR/redirect_to_https.tmpl;
-    include PH_NGINX_CONF_TMPL_DIR/misc.tmpl;
-    include PH_NGINX_CONF_TMPL_DIR/stub_status.tmpl;
-    include PH_NGINX_CONF_TMPL_DIR/php-catchall.tmpl;
+    return 301 https://$host$request_uri;
 }
